# ai-conference-organizer

./: .cursorrules  .env.local  .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
